data/manifests/artifacthub/bitnami/keycloak/012_service_release-name-keycloak-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-keycloak-headless
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 26.3.3
    helm.sh/chart: keycloak-25.2.0
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/part-of: keycloak
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/part-of: keycloak
