data/manifests/artifacthub/bitnami/keycloak/002_networkpolicy_release-name-keycloak.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-keycloak
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 26.3.3
    helm.sh/chart: keycloak-25.2.0
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/part-of: keycloak
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: keycloak
      app.kubernetes.io/component: keycloak
      app.kubernetes.io/part-of: keycloak
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
  ingress:
  - ports:
    - port: 8080
    - port: 7800
